[gd_scene load_steps=13 format=3 uid="uid://cixahv54sskuy"]

[ext_resource type="Texture2D" uid="uid://cx1ivjobggp8n" path="res://assets/sprites/rogues.png" id="1_1e5ka"]
[ext_resource type="Script" uid="uid://dgo2mkq5xo07y" path="res://scenes/battle_units/battle_unit.gd" id="1_f2yne"]
[ext_resource type="Script" uid="uid://246mmteqmxe5" path="res://components/picked_sprite2d.gd" id="2_f2yne"]
[ext_resource type="PackedScene" uid="uid://dgj8mnf4mon55" path="res://scenes/health_bars/health_bar.tscn" id="3_ignx7"]
[ext_resource type="PackedScene" uid="uid://co6xnkftqn6ov" path="res://scenes/mana_bars/mana_bar.tscn" id="4_anrpf"]
[ext_resource type="PackedScene" uid="uid://dpu0krtwtlqmo" path="res://scenes/tier_icons/tier_icon.tscn" id="5_epwbv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwpwl"]
size = Vector2(36, 36)

[sub_resource type="Animation" id="Animation_1e5ka"]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.261799, 0.261799, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 0.8), Vector2(0.8, 1.2), Vector2(0.9, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_f2yne"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skin:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ignx7"]
resource_name = "cast"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.22, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 0.7), Vector2(0.7, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.22, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.92549, 0.988235, 0, 1), Color(0.92549, 0.988235, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_anrpf"]
resource_name = "move"
length = 0.55
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1), Vector2(0.9, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin:skew")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_anrpf"]
_data = {
&"RESET": SubResource("Animation_f2yne"),
&"attack": SubResource("Animation_1e5ka"),
&"cast": SubResource("Animation_ignx7"),
&"move": SubResource("Animation_anrpf")
}

[node name="BattleUnit" type="Area2D"]
script = ExtResource("1_f2yne")

[node name="Skin" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_1e5ka")
region_enabled = true
region_rect = Rect2(64, 32, 32, 32)
script = ExtResource("2_f2yne")
coordinates = Vector2i(2, 1)
metadata/_custom_type_script = "uid://246mmteqmxe5"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gwpwl")

[node name="HealthBar" parent="." instance=ExtResource("3_ignx7")]
unique_name_in_owner = true
offset_left = -15.0
offset_top = -27.0
offset_right = 15.0
offset_bottom = -21.0

[node name="ManaBar" parent="." instance=ExtResource("4_anrpf")]
unique_name_in_owner = true
offset_left = -15.0
offset_top = -22.0
offset_right = 15.0
offset_bottom = -18.0

[node name="TierIcon" parent="." instance=ExtResource("5_epwbv")]
unique_name_in_owner = true
z_index = 1
offset_left = -15.0
offset_top = -19.0
offset_right = -5.0
offset_bottom = -9.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_anrpf")
}
